parsing changes